# intelligence_shoepad_app

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: notify.yml
broker/: go.mod  main.go
broker/lib/: libbroker.h
inc/: data_container.hpp  data_recorder.hpp  graphicsview.hpp  infobox.hpp  macro_utils.h  mainwindow.h  mqtt_app.hpp  msgbox_utils.hpp  network.hpp  settings_io.hpp  udp_app.hpp
inc/worker/: chart_worker.hpp  classification_worker.hpp  graphics_worker.hpp
model/: model.py  train.py
src/: data_container.cpp  data_recorder.cpp  graphicsview.cpp  infobox.cpp  intelligence_shoepad_app_en_HK.ts  main.cpp  mainwindow.cpp  mainwindow.ui  mqtt_app.cpp  msgbox_utils.cpp  network.cpp  settings_io.cpp  udp_app.cpp
src/worker/: chart_worker.cpp  classification_worker.cpp  graphics_worker.cpp
tests/: test_udp_server.py
